# WatchListr

./: README.md
BACK_END/watchlistr_api/: .gitignore  Cargo.toml  Dockerfile  WatchListrAPI.postman_collection.json  docker-compose.yml  sqlx-data.json
BACK_END/watchlistr_api/src/: handler.rs  main.rs  model.rs  route.rs  schema.rs
FRONT_END/: .gitignore  README.md  angular.json  package-lock.json  package.json
FRONT_END/src/: index.html  styles.css
FRONT_END/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
FRONT_END/src/app/components/add-show/: add-show.component.css  add-show.component.html  add-show.component.ts
FRONT_END/src/app/components/home/: home.component.css  home.component.html  home.component.ts
FRONT_END/src/app/environment/: environment.ts
FRONT_END/src/app/models/: show.ts
FRONT_END/src/app/services/anime-db/: anime-db.service.ts
FRONT_END/src/app/services/shows/: show.service.ts
