[package]
name = "watchlistr_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
axum = { version = "*", features = ["json"] }
dotenvy = "*"
hyper = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
sqlx = { version = "*", features = ["runtime-tokio-rustls", "postgres", "offline"] }
tokio = { version = "*", features = ["macros"] }
tower-http = {version= "*", features = ["cors"]}

[dev-dependencies]
tower = { version = "*", features = ["util"] }
sqlx-cli = "*"
